--- a/Menggambar Garis/index.html
+++ b/Menggambar Garis/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menggambar Segitiga</title>
+    <title>Menggambar Garis</title>
     <script src="main.js"></script>
 </head>
-<body>
-    <canvas id="id" width="500" height="500" style="border: 1px solid black;">
+<body onload="main()">
+    <canvas id="myCanvas" width="500" height="500" style="border: 1px solid black;">
     </canvas>
 </body>
 </html>
